# Secretary-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pubsub_listener.py  pyproject.toml  setup_gmail_watches.py  worker.py
.github/workflows/: deploy.yml
app/: main.py
diagnostics/: __init__.py  setup_gmail_watch.py  testpubsubemail.py
docs/: gmail-watch-management.md
infrastructure/: pubsub_listener.py
service/: db_service.py  email_service.py  gmail_client.py  gmail_watch_service.py
