[project]
name = "secretary-agent"
version = "0.1.0"
description = "Personal secretary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-pubsub>=2.31.1",
    "google-generativeai>=0.8.5",
    "openai>=1.108.1",
    "openai-agents>=0.3.1",
    "oracledb>=3.3.0",
    "python-dotenv>=1.1.1",
]
